# pytorch-lightning-spells

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  readthedocs.yml  setup.py
.circleci/: config.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pytorch_lightning_spells.callbacks.rst  pytorch_lightning_spells.cutmix_utils.rst  pytorch_lightning_spells.loggers.rst  pytorch_lightning_spells.losses.rst  pytorch_lightning_spells.lr_schedulers.rst  pytorch_lightning_spells.metrics.rst  pytorch_lightning_spells.optimizers.rst  pytorch_lightning_spells.rst  pytorch_lightning_spells.samplers.rst  pytorch_lightning_spells.snapmix_utils.rst  pytorch_lightning_spells.utils.rst
pytorch_lightning_spells/: __init__.py  callbacks.py  cutmix_utils.py  loggers.py  losses.py  lr_schedulers.py  metrics.py  optimizers.py  samplers.py  snapmix_utils.py  utils.py  version.py
pytorch_lightning_spells/tests/: test_callbacks.py  test_optimizers.py
