[project]
name = "pytorch-lightning-spells"
dynamic = ["version"]
description = "Some useful plugins for PyTorch Lightning."
requires-python = ">=3.11"
dependencies = [
    "pytorch-lightning>=2.5.0,<2.6.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
]
author = "Ceshine Lee"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pytorch_lightning_spells/version.py"
